Added firebase and sheets api:

--- a/hackathon/webapp/templates/webapp/individualregistration.html
+++ b/hackathon/webapp/templates/webapp/individualregistration.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap CSS-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="../../static/app/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../static/webapp/styles.css">
 	<!-- Noto Sans Font -->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"> 
 	<!-- PT Mono Font -->
@@ -32,9 +32,9 @@
 	<!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg sticky-top navbar-registration">
 		<div class="collapse navbar-collapse justify-content-start" style="margin-left: 20px;">
-			<img src="../../static/app/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
-			<img src="../../static/app/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
-			<img src="../../static/app/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">		
+			<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
+			<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
+			<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">		
 		</div>
 		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 		    <ul class="navbar-nav navbar-custom">
@@ -157,7 +157,7 @@
 	</div>
 
 <!-- COUNTDOWN JS -->
-<script type="text/javascript" src="../../static/app/js/countdown.js"></script>
+<script type="text/javascript" src="../../static/webapp/js/countdown.js"></script>
 <script type="text/javascript">
 	$('#clock').countdown('2019/8/15', function(event) {
   	var $this = $(this).html(event.strftime(''
