--- a/hackathon/webapp/templates/webapp/registration.html
+++ b/hackathon/webapp/templates/webapp/registration.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap CSS-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="../../static/app/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../static/webapp/styles.css">
 	<!-- Noto Sans Font -->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"> 
 	<!-- PT Mono Font -->
@@ -26,9 +26,9 @@
 	<!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg sticky-top navbar-registration">
 		<div class="collapse navbar-collapse justify-content-start" style="margin-left: 20px;">
-			<img src="../../static/app/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
-			<img src="../../static/app/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
-			<img src="../../static/app/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">		
+			<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
+			<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
+			<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">		
 		</div>
 		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 		    <ul class="navbar-nav navbar-custom">
@@ -59,17 +59,17 @@
 	<div class="container" style="margin-top: 50px;">
 		<div class="row text-center justify-content-center">
 			<div class="col-4">
-				<a href="individualregistration.html">
-					<img src="../../static/app/imgs/teamwork.svg" id="eligibilityImage">
+				<a href="{% url 'registration_individual' %}">
+					<img src="../../static/webapp/imgs/teamwork.svg" id="eligibilityImage">
 					<h4 id="individualTitle">Individuals</h4>
 				</a>
 			</div>
 			<div class="col-2" style="margin-top: 56px">
-				<img src="../../static/app/imgs/Line.svg" style="height: 240px;">
+				<img src="../../static/webapp/imgs/Line.svg" style="height: 240px;">
 			</div>
 			<div class="col-4">
-				<a href="startupregistration.html">
-					<img src="../../static/app/imgs/flat.svg" id="eligibilityImage">
+				<a href="{% url 'registration_startup' %}">
+					<img src="../../static/webapp/imgs/flat.svg" id="eligibilityImage">
 					<h4 id="startupTitle">Startups</h4>
 				</a>
 			</div>
