--- a/hackathon/webapp/templates/webapp/registration.html
+++ b/hackathon/webapp/templates/webapp/registration.html
@@ -59,7 +59,7 @@
 	<div class="container" style="margin-top: 50px;">
 		<div class="row text-center justify-content-center">
 			<div class="col-4">
-				<a href="{% url 'registration_individual' %}">
+				<a href="{% url 'registration_individual' %}"">
 					<img src="../../static/webapp/imgs/teamwork.svg" id="eligibilityImage">
 					<h4 id="individualTitle">Individuals</h4>
 				</a>
